# mcp-server-ocr

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  librechat-example.yaml  pyproject.toml  requirements.txt  setup.sh  test_setup.py
ocr_mcp/: __init__.py  config.py  server.py
ocr_mcp/backends/: __init__.py  base.py  deepseek.py  marker.py  mistral.py
